# gnd

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/client/: Dockerfile  angular.json  package-lock.json  package.json
src/client/src/: index.html  styles.scss
src/client/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts
src/client/src/app/components/category-tabs/: category-tabs.component.html  category-tabs.component.scss  category-tabs.component.ts
src/client/src/app/components/gallery/: gallery.component.html  gallery.component.scss  gallery.component.ts
src/client/src/app/components/gallery-dialog/: gallery-dialog.component.html  gallery-dialog.component.scss  gallery-dialog.component.ts
src/client/src/app/components/location-dialog/: location-dialog.component.html  location-dialog.component.scss  location-dialog.component.ts
src/client/src/app/components/outfit-card/: outfit-card.component.html  outfit-card.component.scss  outfit-card.component.spec.ts  outfit-card.component.ts
src/client/src/app/components/stat-dialog/: stat-dialog.component.html  stat-dialog.component.scss  stat-dialog.component.spec.ts  stat-dialog.component.ts
src/client/src/app/components/weather-card/: weather-card.component.html  weather-card.component.scss  weather-card.component.ts
src/client/src/app/pages/add-outfit/: add-outfit.component.html  add-outfit.component.scss  add-outfit.component.spec.ts  (+1 more)
src/client/src/app/services/: event.service.ts  network.service.ts
src/server/: server.py
(+32 files in other folders)
